code/y.output
状态 236 conflicts: 1 shift/reduce


语法

    0 $accept: translation_unit $end

    1 primary_expression: ID
    2                   | C_int
    3                   | C_float
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' ID
   10                   | postfix_expression INC
   11                   | postfix_expression DEC

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_expression: postfix_expression
   15                 | INC unary_expression
   16                 | DEC unary_expression
   17                 | unary_operator cast_expression

   18 unary_operator: '*'
   19               | '+'
   20               | '-'
   21               | '!'

   22 cast_expression: unary_expression
   23                | '(' type_name ')' cast_expression

   24 multiplicative_expression: cast_expression
   25                          | multiplicative_expression '*' cast_expression
   26                          | multiplicative_expression '/' cast_expression
   27                          | multiplicative_expression '%' cast_expression

   28 additive_expression: multiplicative_expression
   29                    | additive_expression '+' multiplicative_expression
   30                    | additive_expression '-' multiplicative_expression

   31 relational_expression: additive_expression
   32                      | relational_expression '<' additive_expression
   33                      | relational_expression '>' additive_expression
   34                      | relational_expression BT additive_expression
   35                      | relational_expression LT additive_expression

   36 equality_expression: relational_expression
   37                    | equality_expression EQ relational_expression
   38                    | equality_expression NE relational_expression

   39 and_expression: equality_expression
   40               | and_expression '&' equality_expression

   41 logical_and_expression: and_expression
   42                       | logical_and_expression AND and_expression

   43 logical_or_expression: logical_and_expression
   44                      | logical_or_expression OR logical_and_expression

   45 conditional_expression: logical_or_expression
   46                       | logical_or_expression '?' expression ':' conditional_expression

   47 assignment_expression: conditional_expression
   48                      | unary_expression assignment_operator assignment_expression

   49 assignment_operator: '='
   50                    | MULASSIGN
   51                    | DIVASSIGN
   52                    | SUBASSIGN
   53                    | ADDASSIGN

   54 expression: assignment_expression
   55           | expression ',' assignment_expression

   56 constant_expression: conditional_expression

   57 declaration: declaration_specifiers ';'
   58            | declaration_specifiers init_declarator_list ';'

   59 declaration_specifiers: type_specifier
   60                       | type_specifier declaration_specifiers

   61 init_declarator_list: init_declarator
   62                     | init_declarator_list ',' init_declarator

   63 init_declarator: declarator
   64                | declarator '=' initializer

   65 type_specifier: INT
   66               | FLOAT

   67 specifier_qualifier_list: type_specifier specifier_qualifier_list
   68                         | type_specifier

   69 declarator: pointer direct_declarator
   70           | direct_declarator

   71 direct_declarator: ID
   72                  | '(' declarator ')'
   73                  | direct_declarator '[' constant_expression ']'
   74                  | direct_declarator '[' ']'
   75                  | direct_declarator '(' parameter_type_list ')'
   76                  | direct_declarator '(' identifier_list ')'
   77                  | direct_declarator '(' ')'

   78 pointer: '*'
   79        | '*' pointer

   80 parameter_type_list: parameter_list

   81 parameter_list: parameter_declaration
   82               | parameter_list ',' parameter_declaration

   83 parameter_declaration: declaration_specifiers declarator
   84                      | declaration_specifiers abstract_declarator
   85                      | declaration_specifiers

   86 identifier_list: ID
   87                | identifier_list ',' ID

   88 type_name: specifier_qualifier_list
   89          | specifier_qualifier_list abstract_declarator

   90 abstract_declarator: pointer
   91                    | direct_abstract_declarator
   92                    | pointer direct_abstract_declarator

   93 direct_abstract_declarator: '(' abstract_declarator ')'
   94                           | '[' ']'
   95                           | '[' constant_expression ']'
   96                           | direct_abstract_declarator '[' ']'
   97                           | direct_abstract_declarator '[' constant_expression ']'
   98                           | '(' ')'
   99                           | '(' parameter_type_list ')'
  100                           | direct_abstract_declarator '(' ')'
  101                           | direct_abstract_declarator '(' parameter_type_list ')'

  102 initializer: assignment_expression
  103            | '{' initializer_list '}'
  104            | '{' initializer_list ',' '}'

  105 initializer_list: initializer
  106                 | initializer_list ',' initializer

  107 statement: labeled_statement
  108          | compound_statement
  109          | expression_statement
  110          | selection_statement
  111          | iteration_statement
  112          | jump_statement

  113 labeled_statement: ID ':' statement
  114                  | CASE constant_expression ':' statement

  115 compound_statement: '{' '}'
  116                   | '{' statement_list '}'
  117                   | '{' declaration_list '}'
  118                   | '{' declaration_list statement_list '}'

  119 declaration_list: declaration
  120                 | declaration_list declaration

  121 statement_list: statement
  122               | statement_list statement

  123 expression_statement: ';'
  124                     | expression ';'

  125 selection_statement: IF '(' expression ')' statement
  126                    | IF '(' expression ')' statement ELSE statement
  127                    | SWITCH '(' expression ')' statement

  128 iteration_statement: WHILE '(' expression ')' statement
  129                    | DO statement WHILE '(' expression ')' ';'
  130                    | FOR '(' expression_statement expression_statement ')' statement
  131                    | FOR '(' expression_statement expression_statement expression ')' statement

  132 jump_statement: CONTINUE ';'
  133               | BREAK ';'
  134               | RETURN ';'
  135               | RETURN expression ';'

  136 translation_unit: external_declaration
  137                 | translation_unit external_declaration

  138 external_declaration: function_definition
  139                     | declaration

  140 function_definition: declaration_specifiers declarator declaration_list compound_statement
  141                    | declaration_specifiers declarator compound_statement
  142                    | declarator declaration_list compound_statement
  143                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 21
'%' (37) 27
'&' (38) 40
'(' (40) 4 7 8 23 72 75 76 77 93 98 99 100 101 125 126 127 128 129
    130 131
')' (41) 4 7 8 23 72 75 76 77 93 98 99 100 101 125 126 127 128 129
    130 131
'*' (42) 18 25 78 79
'+' (43) 19 29
',' (44) 13 55 62 82 87 104 106
'-' (45) 20 30
'.' (46) 9
'/' (47) 26
':' (58) 46 113 114
';' (59) 57 58 123 124 129 132 133 134 135
'<' (60) 32
'=' (61) 49 64
'>' (62) 33
'?' (63) 46
'[' (91) 6 73 74 94 95 96 97
']' (93) 6 73 74 94 95 96 97
'{' (123) 103 104 115 116 117 118
'}' (125) 103 104 115 116 117 118
error (256)
ID (258) 1 9 71 86 87 113
C_int (259) 2
C_float (260) 3
ADDASSIGN (261) 53
SUBASSIGN (262) 52
MULASSIGN (263) 50
DIVASSIGN (264) 51
INT (265) 65
FLOAT (266) 66
IF (267) 125 126
ELSE (268) 126
FOR (269) 130 131
WHILE (270) 128 129
CASE (271) 114
DO (272) 129
CONTINUE (273) 132
BREAK (274) 133
RETURN (275) 134 135
SWITCH (276) 127
OR (277) 44
AND (278) 42
EQ (279) 37
NE (280) 38
BT (281) 34
LT (282) 35
INC (283) 10 15
DEC (284) 11 16


Nonterminals, with rules where they appear

$accept (51)
    左： 0
primary_expression (52)
    左： 1 2 3 4, 右： 5
postfix_expression (53)
    左： 5 6 7 8 9 10 11, 右： 6 7 8 9 10 11 14
argument_expression_list (54)
    左： 12 13, 右： 8 13
unary_expression (55)
    左： 14 15 16 17, 右： 15 16 22 48
unary_operator (56)
    左： 18 19 20 21, 右： 17
cast_expression (57)
    左： 22 23, 右： 17 23 24 25 26 27
multiplicative_expression (58)
    左： 24 25 26 27, 右： 25 26 27 28 29 30
additive_expression (59)
    左： 28 29 30, 右： 29 30 31 32 33 34 35
relational_expression (60)
    左： 31 32 33 34 35, 右： 32 33 34 35 36 37 38
equality_expression (61)
    左： 36 37 38, 右： 37 38 39 40
and_expression (62)
    左： 39 40, 右： 40 41 42
logical_and_expression (63)
    左： 41 42, 右： 42 43 44
logical_or_expression (64)
    左： 43 44, 右： 44 45 46
conditional_expression (65)
    左： 45 46, 右： 46 47 56
assignment_expression (66)
    左： 47 48, 右： 12 13 48 54 55 102
assignment_operator (67)
    左： 49 50 51 52 53, 右： 48
expression (68)
    左： 54 55, 右： 4 6 46 55 124 125 126 127 128 129 131 135
constant_expression (69)
    左： 56, 右： 73 95 97 114
declaration (70)
    左： 57 58, 右： 119 120 139
declaration_specifiers (71)
    左： 59 60, 右： 57 58 60 83 84 85 140 141
init_declarator_list (72)
    左： 61 62, 右： 58 62
init_declarator (73)
    左： 63 64, 右： 61 62
type_specifier (74)
    左： 65 66, 右： 59 60 67 68
specifier_qualifier_list (75)
    左： 67 68, 右： 67 88 89
declarator (76)
    左： 69 70, 右： 63 64 72 83 140 141 142 143
direct_declarator (77)
    左： 71 72 73 74 75 76 77, 右： 69 70 73 74 75 76 77
pointer (78)
    左： 78 79, 右： 69 79 90 92
parameter_type_list (79)
    左： 80, 右： 75 99 101
parameter_list (80)
    左： 81 82, 右： 80 82
parameter_declaration (81)
    左： 83 84 85, 右： 81 82
identifier_list (82)
    左： 86 87, 右： 76 87
type_name (83)
    左： 88 89, 右： 23
abstract_declarator (84)
    左： 90 91 92, 右： 84 89 93
direct_abstract_declarator (85)
    左： 93 94 95 96 97 98 99 100 101, 右： 91 92 96 97 100 101
initializer (86)
    左： 102 103 104, 右： 64 105 106
initializer_list (87)
    左： 105 106, 右： 103 104 106
statement (88)
    左： 107 108 109 110 111 112, 右： 113 114 121 122 125 126
    127 128 129 130 131
labeled_statement (89)
    左： 113 114, 右： 107
compound_statement (90)
    左： 115 116 117 118, 右： 108 140 141 142 143
declaration_list (91)
    左： 119 120, 右： 117 118 120 140 142
statement_list (92)
    左： 121 122, 右： 116 118 122
expression_statement (93)
    左： 123 124, 右： 109 130 131
selection_statement (94)
    左： 125 126 127, 右： 110
iteration_statement (95)
    左： 128 129 130 131, 右： 111
jump_statement (96)
    左： 132 133 134 135, 右： 112
translation_unit (97)
    左： 136 137, 右： 0 137
external_declaration (98)
    左： 138 139, 右： 136 137
function_definition (99)
    左： 140 141 142 143, 右： 138


State 0

    0 $accept: . translation_unit $end

    ID     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    '*'    shift, and go to state 4
    '('    shift, and go to state 5

    declaration             转到状态 6
    declaration_specifiers  转到状态 7
    type_specifier          转到状态 8
    declarator              转到状态 9
    direct_declarator       转到状态 10
    pointer                 转到状态 11
    translation_unit        转到状态 12
    external_declaration    转到状态 13
    function_definition     转到状态 14


State 1

   71 direct_declarator: ID .

    $default  reduce using rule 71 (direct_declarator)


State 2

   65 type_specifier: INT .

    $default  reduce using rule 65 (type_specifier)


State 3

   66 type_specifier: FLOAT .

    $default  reduce using rule 66 (type_specifier)


State 4

   78 pointer: '*' .
   79        | '*' . pointer

    '*'  shift, and go to state 4

    $default  reduce using rule 78 (pointer)

    pointer  转到状态 15


State 5

   72 direct_declarator: '(' . declarator ')'

    ID   shift, and go to state 1
    '*'  shift, and go to state 4
    '('  shift, and go to state 5

    declarator         转到状态 16
    direct_declarator  转到状态 10
    pointer            转到状态 11


State 6

  139 external_declaration: declaration .

    $default  reduce using rule 139 (external_declaration)


State 7

   57 declaration: declaration_specifiers . ';'
   58            | declaration_specifiers . init_declarator_list ';'
  140 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  141                    | declaration_specifiers . declarator compound_statement

    ID   shift, and go to state 1
    '*'  shift, and go to state 4
    ';'  shift, and go to state 17
    '('  shift, and go to state 5

    init_declarator_list  转到状态 18
    init_declarator       转到状态 19
    declarator            转到状态 20
    direct_declarator     转到状态 10
    pointer               转到状态 11


State 8

   59 declaration_specifiers: type_specifier .
   60                       | type_specifier . declaration_specifiers

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3

    $default  reduce using rule 59 (declaration_specifiers)

    declaration_specifiers  转到状态 21
    type_specifier          转到状态 8


State 9

  142 function_definition: declarator . declaration_list compound_statement
  143                    | declarator . compound_statement

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    '{'    shift, and go to state 22

    declaration             转到状态 23
    declaration_specifiers  转到状态 24
    type_specifier          转到状态 8
    compound_statement      转到状态 25
    declaration_list        转到状态 26


State 10

   70 declarator: direct_declarator .
   73 direct_declarator: direct_declarator . '[' constant_expression ']'
   74                  | direct_declarator . '[' ']'
   75                  | direct_declarator . '(' parameter_type_list ')'
   76                  | direct_declarator . '(' identifier_list ')'
   77                  | direct_declarator . '(' ')'

    '['  shift, and go to state 27
    '('  shift, and go to state 28

    $default  reduce using rule 70 (declarator)


State 11

   69 declarator: pointer . direct_declarator

    ID   shift, and go to state 1
    '('  shift, and go to state 5

    direct_declarator  转到状态 29


State 12

    0 $accept: translation_unit . $end
  137 translation_unit: translation_unit . external_declaration

    $end   shift, and go to state 30
    ID     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    '*'    shift, and go to state 4
    '('    shift, and go to state 5

    declaration             转到状态 6
    declaration_specifiers  转到状态 7
    type_specifier          转到状态 8
    declarator              转到状态 9
    direct_declarator       转到状态 10
    pointer                 转到状态 11
    external_declaration    转到状态 31
    function_definition     转到状态 14


State 13

  136 translation_unit: external_declaration .

    $default  reduce using rule 136 (translation_unit)


State 14

  138 external_declaration: function_definition .

    $default  reduce using rule 138 (external_declaration)


State 15

   79 pointer: '*' pointer .

    $default  reduce using rule 79 (pointer)


State 16

   72 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 32


State 17

   57 declaration: declaration_specifiers ';' .

    $default  reduce using rule 57 (declaration)


State 18

   58 declaration: declaration_specifiers init_declarator_list . ';'
   62 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 33
    ';'  shift, and go to state 34


State 19

   61 init_declarator_list: init_declarator .

    $default  reduce using rule 61 (init_declarator_list)


State 20

   63 init_declarator: declarator .
   64                | declarator . '=' initializer
  140 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  141                    | declaration_specifiers declarator . compound_statement

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    '='    shift, and go to state 35
    '{'    shift, and go to state 22

    $default  reduce using rule 63 (init_declarator)

    declaration             转到状态 23
    declaration_specifiers  转到状态 24
    type_specifier          转到状态 8
    compound_statement      转到状态 36
    declaration_list        转到状态 37


State 21

   60 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 60 (declaration_specifiers)


State 22

  115 compound_statement: '{' . '}'
  116                   | '{' . statement_list '}'
  117                   | '{' . declaration_list '}'
  118                   | '{' . declaration_list statement_list '}'

    ID        shift, and go to state 38
    C_int     shift, and go to state 39
    C_float   shift, and go to state 40
    INT       shift, and go to state 2
    FLOAT     shift, and go to state 3
    IF        shift, and go to state 41
    FOR       shift, and go to state 42
    WHILE     shift, and go to state 43
    CASE      shift, and go to state 44
    DO        shift, and go to state 45
    CONTINUE  shift, and go to state 46
    BREAK     shift, and go to state 47
    RETURN    shift, and go to state 48
    SWITCH    shift, and go to state 49
    '+'       shift, and go to state 50
    '*'       shift, and go to state 51
    '-'       shift, and go to state 52
    ';'       shift, and go to state 53
    '{'       shift, and go to state 22
    '}'       shift, and go to state 54
    '!'       shift, and go to state 55
    '('       shift, and go to state 56
    INC       shift, and go to state 57
    DEC       shift, and go to state 58

    primary_expression         转到状态 59
    postfix_expression         转到状态 60
    unary_expression           转到状态 61
    unary_operator             转到状态 62
    cast_expression            转到状态 63
    multiplicative_expression  转到状态 64
    additive_expression        转到状态 65
    relational_expression      转到状态 66
    equality_expression        转到状态 67
    and_expression             转到状态 68
    logical_and_expression     转到状态 69
    logical_or_expression      转到状态 70
    conditional_expression     转到状态 71
    assignment_expression      转到状态 72
    expression                 转到状态 73
    declaration                转到状态 23
    declaration_specifiers     转到状态 24
    type_specifier             转到状态 8
    statement                  转到状态 74
    labeled_statement          转到状态 75
    compound_statement         转到状态 76
    declaration_list           转到状态 77
    statement_list             转到状态 78
    expression_statement       转到状态 79
    selection_statement        转到状态 80
    iteration_statement        转到状态 81
    jump_statement             转到状态 82


State 23

  119 declaration_list: declaration .

    $default  reduce using rule 119 (declaration_list)


State 24

   57 declaration: declaration_specifiers . ';'
   58            | declaration_specifiers . init_declarator_list ';'

    ID   shift, and go to state 1
    '*'  shift, and go to state 4
    ';'  shift, and go to state 17
    '('  shift, and go to state 5

    init_declarator_list  转到状态 18
    init_declarator       转到状态 19
    declarator            转到状态 83
    direct_declarator     转到状态 10
    pointer               转到状态 11


State 25

  143 function_definition: declarator compound_statement .

    $default  reduce using rule 143 (function_definition)


State 26

  120 declaration_list: declaration_list . declaration
  142 function_definition: declarator declaration_list . compound_statement

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    '{'    shift, and go to state 22
